fix, can barely click the project button on iphone.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -5,6 +5,7 @@ body {
 
 #input-form {
     margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .month-heading {
